Make loading the gittip widget much faster

--- a/style/style.less
+++ b/style/style.less
@@ -1,8 +1,10 @@
 @import (npm) "inconsolata";
+@import "lato.less";
 @import (npm) "twbs";
 @import "variables.less";
 @import "bootswatch.less";
 @import "github.less";
+@import "gittip.less";
 
 body { height: 100%; margin: 0; }
 
