--- a/style/style.less
+++ b/style/style.less
@@ -46,13 +46,12 @@ html, body { height: 100%; /* The html and body elements cannot have any padding
 
 footer { padding: 30px 0; border-top: 1px solid #e5e5e5; background-color: #f5f5f5; }
 
-footer .right { float: right; margin-right: 20px; }
+footer .right { float: right; }
 
-footer p { padding-left: 20px; margin-bottom: 0; color: #777; }
+footer p { margin-bottom: 0; color: #777; }
 
 /* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 767px) {
-  #footer-wrapper { margin-left: -20px; margin-right: -20px; padding-left: 20px; padding-right: 20px; }
   #push, #footer-wrapper { height: 240px; }
 
   footer .right { float: inherit; text-align: center; margin-bottom: 20px; }
