--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,3 +42,4 @@ html(lang='en')
 
       ga('create', 'UA-31798041-3', 'promisejs.org');
       ga('send', 'pageview');
+    script(src="/polyfills/promise-done-5.0.0.min.js")
