Fixed a very minor typo in index.jade (the -> to)

--- a/views/index.jade
+++ b/views/index.jade
@@ -182,7 +182,7 @@ block content
         return readFile(filename, 'utf8').then(JSON.parse);
       }
 
-    p This is very close the the simple synchronous example we started out with.
+    p This is very close to the simple synchronous example we started out with.
 
     h2#implementations Implementations / Polyfills
 
