--- a/views/patterns.jade
+++ b/views/patterns.jade
@@ -131,10 +131,10 @@ block content
     :js
       function all(promises) {
         var accumulator = [];
-        var ready = Promise.from(null);
+        var ready = Promise.resolve(null);
 
         promises.forEach(function (promise) {
-          ready = ready.then(function (acc) {
+          ready = ready.then(function () {
             return promise;
           }).then(function (value) {
             accumulator.push(value);
