Drop the custom fonts and add a static prefix

--- a/style/gittip.less
+++ b/style/gittip.less
@@ -1,5 +1,6 @@
 .gittip-widget {
-  font: normal 9pt/12pt Lato, sans-serif;
+  font-size: 9pt;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #614C3E;
 }
 
