--- a/style/style.less
+++ b/style/style.less
@@ -1,5 +1,3 @@
-@import (npm) "inconsolata";
-@import "lato.less";
 @import (npm) "twbs";
 @import "variables.less";
 @import "bootswatch.less";
@@ -69,7 +67,7 @@ pre code {
   font-size: 1.8em;
   font-smooth:always;
   -webkit-font-smoothing: antialiased;
-  font-family: 'Inconsolata' monospace;
+  font-family: Consolas, 'Liberation Mono', Menlo, Courier, monospace;
   color: black;
 }
 pre {
