--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,7 +33,7 @@ html(lang='en')
             | Can you make this better?  Please fork it on
             a.jepso(href='https://github.com/ForbesLindesay/promisejs.org') GitHub
     block scripts
-    script(src=staticFiles + "/gittip-widget/client.js")
+    script(async src=staticFiles + "/gittip-widget/client.js")
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
