--- a/views/generators.jade
+++ b/views/generators.jade
@@ -179,5 +179,5 @@ block content
     p Please consider donating to the upkeep of this website via #[a(href="https://www.gittip.com/promisejs.org/") GitTip]
 
     ul.pager
-      li.previous: a(href="/patterns") &larr; patterns
-      li.next: a(href="/implementing") implementing &rarr;
+      li.previous: a(href="/patterns/") &larr; patterns
+      li.next: a(href="/implementing/") implementing &rarr;
