--- a/views/implementing.jade
+++ b/views/implementing.jade
@@ -356,5 +356,5 @@ block content
     p Please consider donating to the upkeep of this website via #[a(href="https://www.gittip.com/promisejs.org/") GitTip]
 
     ul.pager
-      li.previous: a(href="/generators") &larr; generators
+      li.previous: a(href="/generators/") &larr; generators
       // li.next.disabled: a(href="#apendix") next &rarr;
