--- a/views/index.jade
+++ b/views/index.jade
@@ -254,7 +254,7 @@ block content
 
     ul
       li
-        a(href="/patterns") Patterns
+        a(href="/patterns/") Patterns
         |  - patterns of promise use, introducing lots of helper methods that will save you time.
       li
         a(href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise") MDN
@@ -267,4 +267,4 @@ block content
 
     ul.pager
       // li.previous: a(href="/") &larr; introduction
-      li.next: a(href="/patterns") patterns &rarr;
+      li.next: a(href="/patterns/") patterns &rarr;
