--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,9 +10,9 @@ html(lang='en')
         .container
           ul.nav.navbar-nav
             li: a(href='/') Promises
-            li: a(href='/patterns') Patterns
-            li: a(href='/generators') Generators
-            li: a(href='/implementing') Implementing
+            li: a(href='/patterns/') Patterns
+            li: a(href='/generators/') Generators
+            li: a(href='/implementing/') Implementing
           ul.nav.navbar-nav.navbar-right
             li: a(href='http://promisesaplus.com/') Specification
       block content
