--- a/views/patterns.jade
+++ b/views/patterns.jade
@@ -195,7 +195,7 @@ block content
 
     ul
       li
-        a(href="/generators") Generators
+        a(href="/generators/") Generators
         |  - learn how to use generators and promises together to make programming with promises really easy (in browsers with ES6 support)
       li
         a(href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise") MDN
@@ -208,4 +208,4 @@ block content
 
     ul.pager
       li.previous: a(href="/") &larr; introduction
-      li.next: a(href="/generators") generators &rarr;
+      li.next: a(href="/generators/") generators &rarr;
