--- a/views/implementing.jade
+++ b/views/implementing.jade
@@ -37,7 +37,7 @@ block content
     h2#transitions Transitions
 
     p.
-      Next, lets consider the two key tansitions that can occur, fulfilling and rejecting:
+      Next, lets consider the two key transitions that can occur, fulfilling and rejecting:
 
     :js
       var PENDING = 0;
