Fix a couple typos

--- a/views/patterns.jade
+++ b/views/patterns.jade
@@ -104,9 +104,9 @@ block content
       }
 
     p.
-      That's a madening amount of code to have to write for such a simple asynchronous function.
+      That's a maddening amount of code to have to write for such a simple asynchronous function.
       It is possible to write most of this into a library function that lets you do an asynchronous
-      "map" operation, but that only solves the very specific case, and can still be remarcably fiddly.
+      "map" operation, but that only solves the very specific case, and can still be remarkably fiddly.
 
     h2#all Promise.all
 
