Note about promises not changing underlying architecture.

--- a/views/index.jade
+++ b/views/index.jade
@@ -63,7 +63,8 @@ block content
       Despite all this mess of error handling code, we are still
       left with the problem of the extra #[code callback] parameter
       hanging around. Promises help you naturally handle errors, and
-      write cleaner code by not having #[code callback] parameters.
+      write cleaner code by not having #[code callback] parameters,
+      and without modifying the underlying architecture.
 
     h2#definition What is a promise?
 
