--- a/style/style.less
+++ b/style/style.less
@@ -25,6 +25,7 @@ h1 { font-size: 80px; font-weight: bold; letter-spacing: -1px; line-height: 1; t
 }
 @media (max-width: 400px) {
   h1 { font-size: 40px; }
+  h2 { font-size: 30px; }
 }
 
 /* Sticky footer styles */
@@ -77,6 +78,18 @@ pre {
   box-shadow: 0px 0px 6px rgba(0,0,0,0.3);
   border-radius: 0;
 }
+@media (max-width: 700px) {
+  pre {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  .container > pre, .container > .small-code > pre {
+    margin-left: -15px;
+    margin-right: -15px;
+    padding-left: 1px;
+    padding-right: 1px;
+  }
+}
 .small-code pre code {
   font-size: 1.2em;
 }
@@ -95,5 +108,38 @@ pre {
 @media (max-width: @screen-sm-max) {
   pre code {
     font-size: 1em;
+  }
+}
+@media (max-width: @screen-xs-max) {
+  .small-code pre code {
+    font-size: 0.8em;
+  }
+  pre code {
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 550px) {
+  .specification {
+    display: none;
+  }
+}
+
+@media (max-width: 440px) {
+  ul.navbar-nav li a {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media (max-width: 400px) {
+  ul.navbar-nav li a {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+@media (max-width: 360px) {
+  // do something else here
+  ul.navbar-nav li a {
+    font-size: 0.8em;
   }
 }
