Explain wha tee mean by not "modifying the underlying architecture"

--- a/views/index.jade
+++ b/views/index.jade
@@ -64,7 +64,9 @@ block content
       left with the problem of the extra #[code callback] parameter
       hanging around. Promises help you naturally handle errors, and
       write cleaner code by not having #[code callback] parameters,
-      and without modifying the underlying architecture.
+      and without modifying the underlying architecture (i.e. you can
+      #[a(href="/implementing/") implement] them in pure JavaScript
+      and use them to wrap existing asynchronous operations).
 
     h2#definition What is a promise?
 
