Add link to bluebird
[see https://twitter.com/dan_abramov/status/563722315788476416]

--- a/views/implementing.jade
+++ b/views/implementing.jade
@@ -350,6 +350,14 @@ block content
         |  is a very different implementation of promises and comes with a very nice
         |  walkthrough of the design principals behind it.
       li
+        a(href="https://github.com/petkaantonov/bluebird") petkaantonov/bluebird
+        |  is a promise implementation that was designed exclusivley
+        |  for performance (along with its own
+        |  esoteric helper methods).  The
+        = ' '
+        a(href="https://github.com/petkaantonov/bluebird/wiki/Optimization-killers") Optimization Killers Wiki page
+        |  is extremely useful for picking up tips.
+      li
         a(href="http://stackoverflow.com/questions/23772801/basic-javascript-promise-implementation-attempt/23785244#23785244") Stack Overflow
         |  is the original source of this article.
 
