--- a/views/patterns.jade
+++ b/views/patterns.jade
@@ -21,7 +21,7 @@ block content
     h2#resovle Promise.resolve(value)
 
     p.
-      Somtimes you already have a value and you want to convert it into a promise. You may also
+      Sometimes you already have a value and you want to convert it into a promise. You may also
       sometimes find yourself with a value that may or may not be a promise. Finally you might
       find you have a value that is a promise but does not work as it should (e.g. a jQuery promise)
       and want to convert it into a true promise.
