--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,13 +28,14 @@ html(lang='en')
           p
             | Please consult
             = ' '
-            a.jepso(href='http://promisesaplus.com/') The Official Promises/A+ Specificaiton
+            a.jepso(href='http://promisesaplus.com/') The Official Promises/A+ Specification
             |  for official info on promises.
           p
             | Developed by&nbsp;
             a.jepso(href='http://www.forbeslindesay.co.uk') @ForbesLindesay
           p
             | Can you make this better?  Please fork it on
+            = ' '
             a.jepso(href='https://github.com/ForbesLindesay/promisejs.org') GitHub
     block scripts
     script(async src=staticFiles + "/gittip-widget/client.js")
