Fix "specification" typo

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,7 +28,7 @@ html(lang='en')
           p
             | Please consult
             = ' '
-            a.jepso(href='http://promisesaplus.com/') The Official Promises/A+ Specificaiton
+            a.jepso(href='http://promisesaplus.com/') The Official Promises/A+ Specification
             |  for official info on promises.
           p
             | Developed by&nbsp;
