Add reference page and update promise

--- a/style/style.less
+++ b/style/style.less
@@ -119,27 +119,32 @@ pre {
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 600px) {
   .specification {
     display: none;
   }
 }
 
-@media (max-width: 440px) {
+@media (max-width: 500px) {
   ul.navbar-nav li a {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
-@media (max-width: 400px) {
+@media (max-width: 444px) {
   ul.navbar-nav li a {
     padding-left: 5px;
     padding-right: 5px;
   }
 }
-@media (max-width: 360px) {
+@media (max-width: 389px) {
   // do something else here
   ul.navbar-nav li a {
     font-size: 0.8em;
+  }
+}
+@media (max-width: 340px) and (min-width: 300px) {
+  .navbar > .container {
+    padding: 0;
   }
 }
