--- a/views/index.jade
+++ b/views/index.jade
@@ -270,4 +270,4 @@ block content
 
     ul.pager
       // li.previous: a(href="/") &larr; introduction
-      li.next: a(href="/patterns/") patterns &rarr;
+      li.next: a(href="/api/") API Reference &rarr;
