--- a/views/patterns.jade
+++ b/views/patterns.jade
@@ -207,5 +207,5 @@ block content
     p Please consider donating to the upkeep of this website via #[a(href="https://www.gittip.com/promisejs.org/") GitTip]
 
     ul.pager
-      li.previous: a(href="/") &larr; introduction
+      li.previous: a(href="/api/") &larr; API Reference
       li.next: a(href="/generators/") generators &rarr;
