--- a/views/implementing.jade
+++ b/views/implementing.jade
@@ -154,10 +154,10 @@ block content
             done = true
             onRejected(reason)
           })
-        } catch (ex) {
+        } catch (e) {
           if (done) return
           done = true
-          onRejected(ex)
+          onRejected(e)
         }
       }
 
@@ -296,8 +296,8 @@ block content
             if (typeof onFulfilled === 'function') {
               try {
                 return resolve(onFulfilled(result));
-              } catch (ex) {
-                return reject(ex);
+              } catch (e) {
+                return reject(e);
               }
             } else {
               return resolve(result);
@@ -306,8 +306,8 @@ block content
             if (typeof onRejected === 'function') {
               try {
                 return resolve(onRejected(error));
-              } catch (ex) {
-                return reject(ex);
+              } catch (e) {
+                return reject(e);
               }
             } else {
               return reject(error);
@@ -393,8 +393,8 @@ block content
               if (typeof onFulfilled === 'function') {
                 try {
                   return resolve(onFulfilled(result));
-                } catch (ex) {
-                  return reject(ex);
+                } catch (e) {
+                  return reject(e);
                 }
               } else {
                 return resolve(result);
@@ -403,8 +403,8 @@ block content
               if (typeof onRejected === 'function') {
                 try {
                   return resolve(onRejected(error));
-                } catch (ex) {
-                  return reject(ex);
+                } catch (e) {
+                  return reject(e);
                 }
               } else {
                 return reject(error);
