Revert "Promise.all returns array of results in order"

--- a/views/patterns.jade
+++ b/views/patterns.jade
@@ -133,11 +133,11 @@ block content
         var accumulator = [];
         var ready = Promise.resolve(null);
 
-        promises.forEach(function (promise, ndx) {
+        promises.forEach(function (promise) {
           ready = ready.then(function () {
             return promise;
           }).then(function (value) {
-            accumulator[ndx] = value;
+            accumulator.push(value);
           });
         });
 
