--- a/views/page.jade
+++ b/views/page.jade
@@ -2,4 +2,12 @@ extends ./layout.jade
 
 block content
   .container
+    //-
+      script(
+        async
+        type="text/javascript"
+        src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=promisejsorg"
+        id="_carbonads_js"
+      )
+    #ad-container
     != content
