--- a/views/layout.jade
+++ b/views/layout.jade
@@ -50,7 +50,7 @@ html(lang=(locale && translated) ? locale: 'en')
 
       (function (c, s) {
       s.async=true;
-      s.src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=promisejsorg";
+      s.src="//cdn.carbonads.com/carbon.js?serve=CKYILKQY&placement=promisejsorg";
       s.id="_carbonads_js";
       c.appendChild(s);
       }(d, document.createElement('script')));
