change import to include (layout.jade; fbpixel)

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -55,4 +55,4 @@ html(lang=(locale && translated) ? locale: 'en')
       c.appendChild(s);
       }(d, document.createElement('script')));
       }, 1000);
-    import ./fbpixel.html
+    include ./fbpixel.html
